# python-camera-classifier

./: README.md  app.py  camera.py  main.py  model.py  pyproject.toml
